--- a/src/raycast/CMakeLists.txt
+++ b/src/raycast/CMakeLists.txt
@@ -4,6 +4,8 @@ add_library (PathTracer.RayCast OBJECT
     hit.cpp
     )
 
+include_directories(${PATH_TRACER_SOURCE_DIR})
+
 target_include_directories (
     PathTracer.RayCast PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
     )
