--- a/test/scene/CMakeLists.txt
+++ b/test/scene/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library (PathTracer.SceneTest OBJECT
     triangleTest.cpp
     )
 
-include_directories(${CMAKE_SOURCE_DIR}/src/scene)
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
 target_include_directories (
     PathTracer.SceneTest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
