--- a/test/raycast/CMakeLists.txt
+++ b/test/raycast/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library (PathTracer.RayCastTest OBJECT
     cameraTest.cpp
     )
 
-include_directories(${CMAKE_SOURCE_DIR}/src/raycast)
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
 target_include_directories (
     PathTracer.RayCastTest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
