added tests for adding triangles to a scene and testing intersecting multiple triangles in a scene

--- a/test/scene/CMakeLists.txt
+++ b/test/scene/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library (PathTracer.SceneTest OBJECT
     triangleTest.cpp
+    sceneTest.cpp
     )
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
