--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - '**'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -14,8 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        #TODO add back windows-latest
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
     - run: sudo apt install libgl1-mesa-dev mesa-utils libgl1-mesa-glx libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
@@ -55,5 +57,5 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./test/PathTracer_TEST.exe
+      run: ./test/Release/PathTracer_TEST.exe
 
