header files now show up in Visual Studio.

--- a/src/raycast/CMakeLists.txt
+++ b/src/raycast/CMakeLists.txt
@@ -1,11 +1,21 @@
+set (SourceFiles
+     camera.cpp
+     hit.cpp
+     ray.cpp
+)
+
+set(HeaderFiles
+    camera.h
+    hit.h
+    ray.h 
+)
+
 add_library (PathTracer.RayCast OBJECT
-    ray.cpp
-    camera.cpp
-    hit.cpp
-    )
+             ${SourceFiles} ${HeaderFiles}
+)
 
 include_directories(${PATH_TRACER_SOURCE_DIR})
 
 target_include_directories (
     PathTracer.RayCast PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-    )
+)
