--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,11 +1,20 @@
+set (SourceFiles
+     scene.cpp
+     triangle.cpp
+)
+
+set(HeaderFiles
+    scene.h
+    triangle.h
+)
+
 add_library (PathTracer.Scene OBJECT
-    triangle.cpp
-    scene.cpp
-    )
+             ${SourceFiles} ${HeaderFiles}
+)
 
 include_directories(${PATH_TRACER_SOURCE_DIR})
 
 target_include_directories (
     PathTracer.Scene PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
     ${PATH_TRACER_SOURCE_DIR}
-    )
+)
