--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,10 +4,17 @@ on:
   push:
     branches:
       - main
+    paths:
+      - src/**
+      - test/**
+      - .github/workflows/cmake.yml
   pull_request:
     branches:
       - '**'
-
+    paths:
+      - src/**
+      - test/**
+      - .github/workflows/cmake.yml
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
