--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -81,14 +81,14 @@ jobs:
         sudo apt-get purge -qq fglrx || true
         sudo apt-get install -qq libglfw3-dev libglm-dev
       if: matrix.os == 'ubuntu-20.04'
-    - name: Install Mac dependencies
-      run: |
-        brew install glfw glm
-      if: matrix.os == 'macos-10.15'
-    - name: Install Windows dependencies
-      run: |
-        choco install glfw3
-      if: matrix.os == 'windows-2019'
+    #- name: Install Mac dependencies
+    #  run: |
+    #    brew install glfw glm
+    #  if: matrix.os == 'macos-10.15'
+    #- name: Install Windows dependencies
+    #  run: |
+    #    choco install glfw3
+    #  if: matrix.os == 'windows-2019'
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
