added renderer test, this is empty at the moment but will expand once pixel buffer is implemented

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,10 +10,12 @@ include_directories(${CMAKE_SOURCE_DIR}/packages/ ${CMAKE_SOURCE_DIR}/packages/g
 add_executable(${PROJECT_NAME} 
                $<TARGET_OBJECTS:PathTracer.RayCastTest>
                $<TARGET_OBJECTS:PathTracer.SceneTest>
+               $<TARGET_OBJECTS:PathTracer.RendererTest>
                test.cpp
 )
 target_link_libraries (${PROJECT_NAME}
   PathTracer
 )
 add_subdirectory (raycast)
+add_subdirectory (renderer)
 add_subdirectory (scene)
