Feature/renderer class issue13 (#20)
* created renderer class

* rays now normalize direction in constructor

* moved generate ray functionality out of camera amd added vectors to describe camera orientation

* added camera to scene

* added renderer class

* alter camera test to reflect camera changes

* altered scene tests

* added renderer test, this is empty at the moment but will expand once pixel buffer is implemented

* fixed ray test to account for direction normalization

* run clang format

* fov defaults to 45 degrees in the camera constructor

* changes to static cast and used glm::tan for consistency

* chnaged test to reflect default fov parameter

* more static casts

Co-authored-by: Farzon Lotfi <farzonl@icloud.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 add_executable(${PROJECT_NAME} 
                $<TARGET_OBJECTS:PathTracer.RayCastTest>
                $<TARGET_OBJECTS:PathTracer.SceneTest>
+               $<TARGET_OBJECTS:PathTracer.RendererTest>
                test.cpp
 )
 
@@ -26,4 +27,5 @@ target_link_libraries (${PROJECT_NAME}
   PathTracer
 )
 add_subdirectory (raycast)
+add_subdirectory (renderer)
 add_subdirectory (scene)
