--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,7 @@ endif()
 add_library (${PROJECT_NAME} STATIC
   PathTracerStatic.cpp
   $<TARGET_OBJECTS:PathTracer.RayCast>
+  $<TARGET_OBJECTS:PathTracer.Renderer>
   $<TARGET_OBJECTS:PathTracer.Scene>
 )
 
@@ -64,9 +65,11 @@ target_include_directories(${PROJECT_NAME}
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
   # Add include_directories here
   raycast
+  renderer
   scene
 )
 
 add_subdirectory (raycast)
+add_subdirectory (renderer)
 add_subdirectory (scene)
 add_subdirectory (main)
