Add a shader library, load a plain shader by default. (#29)
* Add a shader library, load a plain shader by default.

* fix for MSVC copy of shaders dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,12 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 endif()
+
+ # Note this is primarily done for MSVC which 
+ # doesn't run from path-tracer dir. However its
+ # good practice to package the shaders with the binary.
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shaders
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src/main)
  
 find_package(GLM) # Look up GLM
 find_package(glfw3 3.3) # Look up glfw
