add a way of loading textures to a quad.

--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,11 +1,19 @@
 set (SourceFiles
-     shader.cpp
+     boundingBox.cpp
+     rectangle.cpp
      renderer.cpp
+     shader.cpp
+     shape.cpp
+     texture.cpp
 )
 
 set(HeaderFiles
-    shader.h
+    boundingBox.h
+    rectangle.h
     renderer.h
+    shader.h
+    shape.h
+    texture.h
 )
 
 add_library (PathTracer.Renderer OBJECT
