--- a/test/renderer/CMakeLists.txt
+++ b/test/renderer/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library (PathTracer.RendererTest OBJECT
     rendererTest.cpp
+    pixelBufferTest.cpp
     )
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
