Feature/texture quad (#33)
* add a way of loading textures to a quad.

* add more shader/texture intanglement

* Hook up pixelbuffer with Texture class.

* simplify shape, drop all the model matrix changes

* first working version

* clean up the code add a conversion to convert to cartesian coordinates

* disable window test that relied on old pixel buffer behavior, track wwith issue #34

--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,11 +1,19 @@
 set (SourceFiles
-     shader.cpp
+     rectangle.cpp
      renderer.cpp
+     shader.cpp
+     shape.cpp
+     texture.cpp
+     pixelBuffer.cpp
 )
 
 set(HeaderFiles
-    shader.h
+    rectangle.h
     renderer.h
+    shader.h
+    shape.h
+    texture.h
+    pixelBuffer.h
 )
 
 add_library (PathTracer.Renderer OBJECT
