--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         path:
           - 'src'
-          - 'plugins'
+          - 'test'
     steps:
     - uses: actions/checkout@v2
     - name: Run clang-format style check for C/C++ programs.
