--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,7 +40,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, ubuntu-20.04, macos-10.15, ]
+        # https://github.com/therenderingguys/path-tracer/issues/38
+        #os: [windows-2019, ubuntu-20.04, macos-10.15, ]
+        os: [windows-2019, macos-10.15]
         language: [ 'cpp' ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
