issue #43: Add an additive light source to the scene class. We will make this a directional light source to start using camera direction.

--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,11 +1,13 @@
 set (SourceFiles
      scene.cpp
      triangle.cpp
+     light.cpp
 )
 
 set(HeaderFiles
     scene.h
     triangle.h
+    light.h
 )
 
 add_library (PathTracer.Scene OBJECT
