--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -4,6 +4,13 @@ set(SOURCE_FILES
                  # add files here
                  main.cpp)
 
+if(WIN32)
+list(APPEND SOURCE_FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/../version/VersionResource.rc
+    ${CMAKE_CURRENT_BINARY_DIR}/../version/VersionInfo.h
+)
+endif()
+
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries (${PROJECT_NAME}
